# mptools

./: .gitignore  pyproject.toml
src/: live2lite.py
src/mptools/: live2lite.py  loudness.py  normalize.py  spleeter.py
