[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mptools"
version = "0.0.1"

dependencies = [
  "essentia-tensorflow",
]

requires-python = ">= 3.8"

[project.scripts]
live2lite = "mptools:live2lite.main"
loudness = "mptools:loudness.main"
spleeter = "mptools:spleeter.main"

[tool.hatch.build.targets.wheel]
packages = ["src/mptools"]

# Include model weights
[tool.hatch.build.targets.wheel.force-include]
"weights" = "mptools/weights/"
