[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mptools"
version = "0.0.2"

dependencies = [
  "essentia-tensorflow",
  "numpy==1.26",
]

requires-python = ">= 3.10"

[project.scripts]
live2lite = "mptools:live2lite.main"
loudness = "mptools:loudness.main"
spleeter = "mptools:spleeter.main"
normalize = "mptools:normalize.main"

[tool.hatch.build.targets.wheel]
packages = ["src/mptools"]

# Include model weights
[tool.hatch.build.targets.wheel.force-include]
"weights" = "mptools/weights/"
